LeetCode 54 - 100% efficient
TODO:
FIX: TwoCityScheduling